small fruit puree improvements

--- a/NMF_fruit_purees/presentation/fruit_purees.tex
+++ b/NMF_fruit_purees/presentation/fruit_purees.tex
@@ -229,7 +229,7 @@ which is the Frobenius norm of both matricies.
 	\column{0.45 \textwidth}
 	\textbf{disadvantages}
 	\begin{itemize}
-	\item Finding coordinates $W$ requires solving $\min_{ W, H }  \quad \left\lVert X - W H\right\rVert^2_F$.
+	\item Finding coordinates $W$ requires solving $\min_{ W}  \left\lVert X - W H\right\rVert^2_F$.
 	\item limited to nonnegative matricies
 	\end{itemize}
 	\end{columns}
@@ -241,6 +241,13 @@ which is the Frobenius norm of both matricies.
 \begin{frame}[focus]
 	Thank you \\
 	Questions?
+	\vfill
+	\href{https://github.com/spirousschuh/presentations/blob/master/NMF_fruit_purees/presentation/fruit_purees.pdf}
+		{\small{Link to Slides}}
+
+
+
+
 \end{frame}
 
 %----------------------------------------------------------------------------------------
